# arkon-interview-test

./: Main.hs  README.txt  Server.hs  arkon.cabal  postgres-config.yaml  postgres-stateful.yaml  schema.gql  webserver-deployment.yaml
haskell/: Demo.hs  Dockerfile  HTTPServer.hs  Main.hs  Server.hs  WebServer.hs  arkon.cabal  schema.gql
haskell/scripts/: arkon-fetchdata.sh  arkon-init.sh
scripts/: update.sh
